# AMAVillager

./: Cargo.toml  README.md  index.html  tree.txt  wasm.js
src/: data.json  lib.rs  main.rs  main.rs.old  readfile_hack.js
wasm/: index.html
