[package]
resolver = "2"
name = "AMAVillager"
version = "0.1.0"
edition = "2021"

# [libIxh]
#crate-type = ["cdylib","rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", default-features = false }
rand = "0.8.4"
serde = "1.0.131"
serde_json = "1.0.72"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
lto = "thin"
opt-level = 's'

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11"]}

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
bevy_webgl2 = "0.5"
getrandom = "0.2.3"